Save blockstack identities' created at and profile updated at